--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -53,7 +53,6 @@
                         @Html.DisplayFor(modelItem => programme.Name)
                         @Html.Raw(" ")
                         @Html.DisplayFor(modelItem => programme.Levels)
-                        @Html.Raw(" ")
                         <br />
                     }
                 </td>
@@ -81,10 +80,10 @@
                     </td>
                 }
                 @*<td>
-                    <a class="text-dark" asp-action="Edit" asp-route-id="@item.SubjectId">Edit</a> |
-                    <a class="text-dark" asp-action="Details" asp-route-id="@item.SubjectId">Details</a> |
-                    <a class="text-dark" asp-action="Delete" asp-route-id="@item.SubjectId">Delete</a>
-                </td>*@
+                        <a class="text-dark" asp-action="Edit" asp-route-id="@item.SubjectId">Edit</a> |
+                        <a class="text-dark" asp-action="Details" asp-route-id="@item.SubjectId">Details</a> |
+                        <a class="text-dark" asp-action="Delete" asp-route-id="@item.SubjectId">Delete</a>
+                    </td>*@
             </tr>
 
             @foreach (var course in item.Courses.Skip(1))
@@ -122,7 +121,7 @@
 </table>
 
 @section SideBar{
-    <div class="sidebar">
+    <div class="sidebar" id="SideBar" onmouseover="openBar()" onmouseout="closeBar()">
         <ul class="nav nav-sidebar justify-content-center">
             <li class="nav-item">
                 <form class="navbar-form navbar-right" asp-area="" asp-controller="Home" asp-action="SearchResult">
@@ -164,17 +163,25 @@
             </div>*@
     </div>
 }
-@*<script type="text/javascript">
 
-        function showSemester() {
-            var x = document.getElementById("semesterForm");
-            if (x.style.display === "none") {
-                x.style.display = "block";
-            } else {
-                x.style.display = "none";
-            }
+<script type="text/javascript">
+    function openBar() {
+        document.getElementById("SideBar").style.width = "200px";
+        document.getElementById("SideBar").style.padding = "20px";
+        document.getElementById("main").style.paddingLeft = "230px";
+        let listElements = document.getElementsByClassName("nav nav-sidebar justify-content-center");
+        for (i = 0; i < listElements.length; i++) {
+            listElements[i].style.display="inline";
         }
-
-
-    </script>*@
+    }
+    function closeBar() {
+        document.getElementById("SideBar").style.width = "60px";
+        document.getElementById("SideBar").style.padding = "0";
+        document.getElementById("main").style.paddingLeft = "90px";
+        let listElements = document.getElementsByClassName("nav nav-sidebar justify-content-center");
+        for (i = 0; i < listElements.length; i++) {
+            listElements[i].style.display = "none";
+        }
+    }
+</script>
 
