--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -9,12 +9,12 @@
 
 <div class="container-fluid">
     <h1>@date félév</h1>
-
-
     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#applyDelete">
         Félév törlése
     </button>
+    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#addSubject" data-url="@Url.Action("Create")" data-id="@id">Create</button>
 </div>
+<div id="PlaceHolderHere"></div>
 
 <div class="modal fade" id="applyDelete" tabindex="-1" role="dialog" aria-labelledby="applyDelete" aria-hidden="true">
     <div class="modal-dialog" role="document">
