--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#applyDelete">
         Félév törlése
     </button>
-    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#addSubject" data-url="@Url.Action("Create")" data-id="@id">Create</button>
+    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#addSubject" data-url="@Url.Action("CreateSubject")" data-id="@id">Tárgy hozzáadása</button>
 </div>
 <div id="PlaceHolderHere"></div>
 
@@ -165,7 +165,7 @@
                                     </td>
                                     <td>
                                         <button class="btn btn-danger"><span class="fa fa-times "></span></button>
-                                        <button class="open_editCourse btn btn-default btn-xs" data-toggle="modal" data-id="ISBN564541" data-target="#editCourse"><span class="fa  fa-cog" aria-hidden="true"></span></button>
+                                        <button class="open_editCourse btn btn-default btn-xs" data-toggle="modal"  data-target="#editCourse"><span class="fa  fa-cog" aria-hidden="true"></span></button>
                                     </td>
 
 
